Insert decision tree

--- a/Implement Linear Discriminant Analysis(LDA).ipynb
+++ b/Implement Linear Discriminant Analysis(LDA).ipynb
@@ -14,7 +14,12 @@
     "(m1 - m2)^2/s1^2 - s2^2 \n",
     "= w^T*S_B*w / w^T*S_w*w\n",
     "\n",
-    "* So the above expression be maximum, the optimal point  is eigenvector whose the eigenvalue of the maxtrix S^-1_W*S_B have to maximum \n"
+    "* So the above expression be maximum, the optimal point  is eigenvector whose the eigenvalue of the maxtrix S^-1_W*S_B have to maximum .\n",
+    "\n",
+    "## Steps:\n",
+    "* Find S_B and S_w\n",
+    "* Find eigenvector w of maxtrix S^-1_W*S_B\n",
+    "* Plot data\n"
    ]
   },
   {
@@ -247,20 +252,6 @@
     "plt.plot(np.array([m[0],om[0]]), np.array([m[1],om[1]]), 'g-')  \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
