Update "rms" optimizer

--- a/Optimizers.ipynb
+++ b/Optimizers.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Optimizers.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVUFW4BV0FW4QXV0iU8phg",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPKXHZh3bLwp2BAQMICHw7p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 81,
       "metadata": {
         "id": "i2cIsCmCYCf4"
       },
@@ -60,7 +61,7 @@
       "metadata": {
         "id": "X6yR28UCYJC1"
       },
-      "execution_count": 198,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -75,7 +76,7 @@
       "metadata": {
         "id": "XREMZI6JZuEK"
       },
-      "execution_count": 199,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -90,57 +91,71 @@
     {
       "cell_type": "code",
       "source": [
-        "class MySGD():\n",
-        "  def __init__(self,lr = 0.001, momentum=0.9):\n",
+        "class MyOptim():\n",
+        "  def __init__(self,lr = 0.001, momentum=0.9, rho = 0.9, mode = 'sgd'):\n",
         "    self.lr = lr \n",
         "    self.momentum = momentum\n",
+        "    self.rho = rho\n",
+        "    self.mode = mode\n",
+        "  def update(self, para, pre_v, pre_Eg, grad_func, para_lambda,n = 1):\n",
+        "    new_v = 0\n",
+        "    Eg = 0\n",
         "\n",
-        "  def update(self, para, v, grad_func, para_lambda,n = 1):\n",
-        "    \n",
         "    a = [*range(n)]\n",
         "    index_update = random.sample(a, n)\n",
         "    selected_para_lambda = ()\n",
         "    for p in para_lambda:\n",
         "      selected_para_lambda = selected_para_lambda + (p[index_update],)\n",
-        "\n",
         "    grad = grad_func(*selected_para_lambda)\n",
-        "    if v is None:\n",
-        "      new_v = - self.lr * grad\n",
-        "    else:\n",
-        "      new_v = self.momentum * v - self.lr * grad\n",
         "\n",
-        "    return para + new_v, new_v\n",
+        "    if self.mode == 'sgd': \n",
+        "      if pre_v is None:\n",
+        "        new_v = - self.lr * grad\n",
+        "      else:\n",
+        "        new_v = self.momentum * pre_v - self.lr * grad\n",
+        "    elif self.mode =='rms':\n",
+        "      if pre_Eg is None:\n",
+        "        Eg = grad**2\n",
+        "      else:\n",
+        "        Eg = self.momentum * pre_Eg + (1 - self.momentum) * grad**2\n",
+        "\n",
+        "      new_v = - self.lr * grad / (Eg + 1e-7)\n",
+        "    return  Eg, new_v\n",
         "\n"
       ],
       "metadata": {
         "id": "bZde0-Kwxfvk"
       },
-      "execution_count": 200,
+      "execution_count": 84,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "class SimpleModel():\n",
-        "  def __init__(self):\n",
+        "  def __init__(self, optimizer):\n",
         "    self.w = np.random.randn(13,1) \n",
         "    self.v_w = None\n",
-        "    self.b=np.random.randn(1,1)\n",
+        "    self.Eg_w = None\n",
+        "    self.b = np.random.randn(1,1)\n",
         "    self.v_b = None\n",
-        "    self.optimizer = MySGD()\n",
+        "    self.Eg_b = None\n",
+        "    self.optimizer = optimizer\n",
         "  def forward(self, x):\n",
         "    out = np.dot(x,self.w) + self.b\n",
         "    return out\n",
         "  def backprop(self, x, y_pred, y):\n",
         "    w_grad_func = lambda x, y_pred, y :  x.T.dot((y_pred - y))\n",
         "    b_grad_func = lambda y_pred, y: np.mean(y_pred - y, axis = 0)\n",
-        "    self.w, self.v_w = self.optimizer.update(self.w, self.v_w, w_grad_func, (x,y_pred,y), 8)\n",
-        "    self.b, self.v_b = self.optimizer.update(self.b, self.v_b,  b_grad_func, (y_pred,y), 8)"
+        "    self.Eg_w, self.v_w = self.optimizer.update(self.w, self.v_w, self.Eg_w, w_grad_func, (x,y_pred,y), 8)\n",
+        "    self.w = self.w + self.v_w\n",
+        "    self.Eg_b, self.v_b = self.optimizer.update(self.b, self.v_b, self.Eg_b, b_grad_func, (y_pred,y), 8)\n",
+        "    self.b = self.b + self.v_b"
       ],
       "metadata": {
         "id": "pJicULJaZypm"
       },
-      "execution_count": 201,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -167,9 +182,9 @@
           "height": 206
         },
         "id": "-hC6NsX4lMwD",
-        "outputId": "8064ebe3-9b13-4d19-c128-24ebeff1a46c"
+        "outputId": "9a305422-3ad0-4894-c437-f065340a187c"
       },
-      "execution_count": 202,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +206,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9bc50b0d-d593-4316-8b3a-7e550940e2d2\">\n",
+              "  <div id=\"df-fe83e346-d016-42f9-9292-ec56b66d20f3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -316,7 +331,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9bc50b0d-d593-4316-8b3a-7e550940e2d2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe83e346-d016-42f9-9292-ec56b66d20f3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -367,12 +382,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9bc50b0d-d593-4316-8b3a-7e550940e2d2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fe83e346-d016-42f9-9292-ec56b66d20f3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9bc50b0d-d593-4316-8b3a-7e550940e2d2');\n",
+              "          const element = document.querySelector('#df-fe83e346-d016-42f9-9292-ec56b66d20f3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -395,7 +410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 202
+          "execution_count": 86
         }
       ]
     },
@@ -412,9 +427,9 @@
           "height": 424
         },
         "id": "7fLICuCevxJr",
-        "outputId": "ced496a9-f83b-4dfc-bc79-22099519363f"
+        "outputId": "bf44d035-657c-414c-f212-8e460e2b8194"
       },
-      "execution_count": 203,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +465,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9511c623-7748-4b48-a13e-185972b2b6c4\">\n",
+              "  <div id=\"df-f170772e-ecbf-4676-8f92-e7d6dee82a42\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -678,7 +693,7 @@
               "</table>\n",
               "<p>506 rows × 14 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9511c623-7748-4b48-a13e-185972b2b6c4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f170772e-ecbf-4676-8f92-e7d6dee82a42')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -729,12 +744,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9511c623-7748-4b48-a13e-185972b2b6c4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f170772e-ecbf-4676-8f92-e7d6dee82a42 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9511c623-7748-4b48-a13e-185972b2b6c4');\n",
+              "          const element = document.querySelector('#df-f170772e-ecbf-4676-8f92-e7d6dee82a42');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -757,7 +772,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 203
+          "execution_count": 87
         }
       ]
     },
@@ -769,7 +784,7 @@
       "metadata": {
         "id": "nmSk7tukFTUq"
       },
-      "execution_count": 203,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -784,9 +799,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BiGnrk_tBzhn",
-        "outputId": "1fbbc1cc-480b-4e8d-c9d3-4a23b213a559"
+        "outputId": "fb3d34ff-c59b-43b1-ede3-86771b0489ef"
       },
-      "execution_count": 204,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,9 +823,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QYwly4AXBwfK",
-        "outputId": "7572bdac-6387-41ca-fc7f-d4e4ffdfd011"
+        "outputId": "ab6e6e10-c872-40f8-9d27-4d1f22f91550"
       },
-      "execution_count": 205,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +835,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 205
+          "execution_count": 89
         }
       ]
     },
@@ -834,11 +849,21 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **SGD**"
+      ],
+      "metadata": {
+        "id": "HRuAge6Fv-kT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "batch_size = 32\n",
         "epochs = 20\n",
-        "model = SimpleModel()\n",
+        "optim = MyOptim()\n",
+        "model = SimpleModel(optim)\n",
         "for epoch in range(epochs):\n",
         "  start = 0\n",
         "  sumloss = 0\n",
@@ -860,37 +885,117 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nO-ROyVCqiRj",
-        "outputId": "2f42acad-3626-4608-aac1-322780f4a992"
+        "outputId": "4e5a87d9-be04-4f36-d1f8-1d624cf2d85f"
       },
-      "execution_count": 206,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 0: Training Loss = 36535.0, Valid Loss = 11785.0\n",
-            "Epoch 1: Training Loss = 16235.0, Valid Loss = 5884.0\n",
-            "Epoch 2: Training Loss = 14648.0, Valid Loss = 6186.0\n",
-            "Epoch 3: Training Loss = 10645.0, Valid Loss = 5057.0\n",
-            "Epoch 4: Training Loss = 8511.0, Valid Loss = 4697.0\n",
-            "Epoch 5: Training Loss = 6815.0, Valid Loss = 4013.0\n",
-            "Epoch 6: Training Loss = 5656.0, Valid Loss = 3457.0\n",
-            "Epoch 7: Training Loss = 4744.0, Valid Loss = 2914.0\n",
-            "Epoch 8: Training Loss = 4070.0, Valid Loss = 2447.0\n",
-            "Epoch 9: Training Loss = 3551.0, Valid Loss = 2035.0\n",
-            "Epoch 10: Training Loss = 3142.0, Valid Loss = 1688.0\n",
-            "Epoch 11: Training Loss = 2821.0, Valid Loss = 1396.0\n",
-            "Epoch 12: Training Loss = 2567.0, Valid Loss = 1155.0\n",
-            "Epoch 13: Training Loss = 2366.0, Valid Loss = 957.0\n",
-            "Epoch 14: Training Loss = 2206.0, Valid Loss = 796.0\n",
-            "Epoch 15: Training Loss = 2080.0, Valid Loss = 666.0\n",
-            "Epoch 16: Training Loss = 1980.0, Valid Loss = 562.0\n",
-            "Epoch 17: Training Loss = 1902.0, Valid Loss = 479.0\n",
-            "Epoch 18: Training Loss = 1841.0, Valid Loss = 414.0\n",
-            "Epoch 19: Training Loss = 1793.0, Valid Loss = 363.0\n"
+            "Epoch 0: Training Loss = 33900.0, Valid Loss = 11060.0\n",
+            "Epoch 1: Training Loss = 17858.0, Valid Loss = 6448.0\n",
+            "Epoch 2: Training Loss = 14871.0, Valid Loss = 6323.0\n",
+            "Epoch 3: Training Loss = 11302.0, Valid Loss = 5359.0\n",
+            "Epoch 4: Training Loss = 8812.0, Valid Loss = 4994.0\n",
+            "Epoch 5: Training Loss = 7089.0, Valid Loss = 4277.0\n",
+            "Epoch 6: Training Loss = 5818.0, Valid Loss = 3689.0\n",
+            "Epoch 7: Training Loss = 4900.0, Valid Loss = 3106.0\n",
+            "Epoch 8: Training Loss = 4188.0, Valid Loss = 2616.0\n",
+            "Epoch 9: Training Loss = 3654.0, Valid Loss = 2175.0\n",
+            "Epoch 10: Training Loss = 3221.0, Valid Loss = 1806.0\n",
+            "Epoch 11: Training Loss = 2886.0, Valid Loss = 1491.0\n",
+            "Epoch 12: Training Loss = 2618.0, Valid Loss = 1233.0\n",
+            "Epoch 13: Training Loss = 2407.0, Valid Loss = 1020.0\n",
+            "Epoch 14: Training Loss = 2238.0, Valid Loss = 847.0\n",
+            "Epoch 15: Training Loss = 2104.0, Valid Loss = 707.0\n",
+            "Epoch 16: Training Loss = 1998.0, Valid Loss = 595.0\n",
+            "Epoch 17: Training Loss = 1915.0, Valid Loss = 505.0\n",
+            "Epoch 18: Training Loss = 1850.0, Valid Loss = 434.0\n",
+            "Epoch 19: Training Loss = 1800.0, Valid Loss = 379.0\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **RMS**"
+      ],
+      "metadata": {
+        "id": "1dF9OVLewJ5w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 32\n",
+        "epochs = 20\n",
+        "optim = MyOptim(lr = 5, rho  = 0.9, mode = 'rms')\n",
+        "model = SimpleModel(optim)\n",
+        "for epoch in range(epochs):\n",
+        "  start = 0\n",
+        "  sumloss = 0\n",
+        "  while start < len(X_train):\n",
+        "    end = min(len(X_train), start + batch_size)\n",
+        "    X_batch = X[start:end]\n",
+        "    y_batch = y[start:end]\n",
+        "    y_pred = model.forward(X_batch)\n",
+        "    sumloss += np.sum((y_pred - y_batch)**2)\n",
+        "    model.backprop(X_batch, y_pred, y_batch)\n",
+        "    start = end\n",
+        "  \n",
+        "  y_pred_valid = model.forward(X_test)\n",
+        "  loss_valid = np.sum((y_pred_valid - y_test)**2)\n",
+        "  print(f'Epoch {epoch}: Training Loss = {sumloss // 10}, Valid Loss = {loss_valid // 10}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RF3VKPASlSVQ",
+        "outputId": "e377ddaf-c4d8-417c-c977-3112b2cf3c93"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0: Training Loss = 26674.0, Valid Loss = 5173.0\n",
+            "Epoch 1: Training Loss = 21518.0, Valid Loss = 4202.0\n",
+            "Epoch 2: Training Loss = 16634.0, Valid Loss = 3300.0\n",
+            "Epoch 3: Training Loss = 12136.0, Valid Loss = 2500.0\n",
+            "Epoch 4: Training Loss = 8204.0, Valid Loss = 1829.0\n",
+            "Epoch 5: Training Loss = 5047.0, Valid Loss = 1313.0\n",
+            "Epoch 6: Training Loss = 2903.0, Valid Loss = 939.0\n",
+            "Epoch 7: Training Loss = 1917.0, Valid Loss = 653.0\n",
+            "Epoch 8: Training Loss = 1795.0, Valid Loss = 455.0\n",
+            "Epoch 9: Training Loss = 1763.0, Valid Loss = 331.0\n",
+            "Epoch 10: Training Loss = 1561.0, Valid Loss = 279.0\n",
+            "Epoch 11: Training Loss = 1393.0, Valid Loss = 266.0\n",
+            "Epoch 12: Training Loss = 1283.0, Valid Loss = 284.0\n",
+            "Epoch 13: Training Loss = 1230.0, Valid Loss = 322.0\n",
+            "Epoch 14: Training Loss = 1224.0, Valid Loss = 369.0\n",
+            "Epoch 15: Training Loss = 1251.0, Valid Loss = 419.0\n",
+            "Epoch 16: Training Loss = 1301.0, Valid Loss = 469.0\n",
+            "Epoch 17: Training Loss = 1366.0, Valid Loss = 517.0\n",
+            "Epoch 18: Training Loss = 1439.0, Valid Loss = 563.0\n",
+            "Epoch 19: Training Loss = 1518.0, Valid Loss = 607.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QWoVxDRVvqez"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
